[gd_scene load_steps=40 format=3 uid="uid://b2gll84jnyb1u"]

[ext_resource type="Script" path="res://scripts/link_controller.gd" id="1_af1d6"]
[ext_resource type="Texture2D" uid="uid://cpa11tutqc7h1" path="res://images/Sprite-0001.png" id="2_8jjpd"]
[ext_resource type="Script" path="res://scripts/link_sprite.gd" id="3_1avva"]
[ext_resource type="Script" path="res://scripts/link_attack_area.gd" id="4_piqjp"]
[ext_resource type="Script" path="res://scripts/link_sound_player.gd" id="5_bwarm"]
[ext_resource type="Script" path="res://scripts/link_movement.gd" id="5_excs0"]
[ext_resource type="Script" path="res://scripts/link_combat.gd" id="6_2h8fc"]
[ext_resource type="Script" path="res://scripts/link_interact.gd" id="7_2vkl0"]
[ext_resource type="Script" path="res://scripts/link_state.gd" id="8_ryf5n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3pcpd"]
size = Vector2(15.9, 7.9)

[sub_resource type="AtlasTexture" id="AtlasTexture_f118x"]
atlas = ExtResource("2_8jjpd")
region = Rect2(128, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_33c5k"]
atlas = ExtResource("2_8jjpd")
region = Rect2(144, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnioh"]
atlas = ExtResource("2_8jjpd")
region = Rect2(160, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lum3"]
atlas = ExtResource("2_8jjpd")
region = Rect2(176, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsoqt"]
atlas = ExtResource("2_8jjpd")
region = Rect2(144, 48, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qbth"]
atlas = ExtResource("2_8jjpd")
region = Rect2(144, 64, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vu0bq"]
atlas = ExtResource("2_8jjpd")
region = Rect2(144, 80, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsuvk"]
atlas = ExtResource("2_8jjpd")
region = Rect2(144, 96, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ihq7"]
atlas = ExtResource("2_8jjpd")
region = Rect2(0, 48, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4ws1"]
atlas = ExtResource("2_8jjpd")
region = Rect2(0, 64, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eapab"]
atlas = ExtResource("2_8jjpd")
region = Rect2(0, 80, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1am0"]
atlas = ExtResource("2_8jjpd")
region = Rect2(0, 96, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3e27"]
atlas = ExtResource("2_8jjpd")
region = Rect2(64, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0k7q8"]
atlas = ExtResource("2_8jjpd")
region = Rect2(80, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oae5k"]
atlas = ExtResource("2_8jjpd")
region = Rect2(96, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uoipm"]
atlas = ExtResource("2_8jjpd")
region = Rect2(112, 0, 16, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5x26x"]
atlas = ExtResource("2_8jjpd")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8gkr"]
atlas = ExtResource("2_8jjpd")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pwx3"]
atlas = ExtResource("2_8jjpd")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pfuo"]
atlas = ExtResource("2_8jjpd")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2v0x"]
atlas = ExtResource("2_8jjpd")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yubd0"]
atlas = ExtResource("2_8jjpd")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hahtb"]
atlas = ExtResource("2_8jjpd")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_shh65"]
atlas = ExtResource("2_8jjpd")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3o3yf"]
atlas = ExtResource("2_8jjpd")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_73v24"]
atlas = ExtResource("2_8jjpd")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_18du3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f118x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33c5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33c5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33c5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnioh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lum3")
}],
"loop": true,
"name": &"attack_wooden_down",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsoqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qbth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qbth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qbth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vu0bq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsuvk")
}],
"loop": true,
"name": &"attack_wooden_left",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ihq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4ws1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4ws1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4ws1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eapab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1am0")
}],
"loop": true,
"name": &"attack_wooden_right",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3e27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0k7q8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0k7q8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0k7q8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oae5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uoipm")
}],
"loop": true,
"name": &"attack_wooden_up",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x26x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8gkr")
}],
"loop": true,
"name": &"down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pwx3")
}],
"loop": true,
"name": &"item_pickup",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pfuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2v0x")
}],
"loop": true,
"name": &"left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yubd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hahtb")
}],
"loop": true,
"name": &"right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_shh65")
}],
"loop": true,
"name": &"triforce_pickup",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3o3yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73v24")
}],
"loop": true,
"name": &"up",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g0xjw"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_305y3"]
size = Vector2(12, 12)

[node name="Link" type="CharacterBody2D" groups=["Player"]]
texture_filter = 1
texture_repeat = 1
collision_layer = 2
safe_margin = 0.001
script = ExtResource("1_af1d6")

[node name="Link Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_3pcpd")
one_way_collision_margin = 0.0

[node name="Link Sprite Mask" type="Control" parent="."]
clip_children = 1
layout_mode = 3
anchors_preset = 0
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0

[node name="Link Sprite" type="AnimatedSprite2D" parent="Link Sprite Mask"]
process_mode = 1
z_index = 1
texture_filter = 1
texture_repeat = 1
position = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_18du3")
animation = &"up"
autoplay = "up"
script = ExtResource("3_1avva")

[node name="Link Hitbox" type="Area2D" parent="." groups=["Player"]]
position = Vector2(0, -4)
collision_layer = 4
collision_mask = 296

[node name="Link Collider" type="CollisionShape2D" parent="Link Hitbox"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_g0xjw")
one_way_collision_margin = 0.0

[node name="Attack Area" type="Area2D" parent="." groups=["Player_Attack"]]
position = Vector2(0, -14)
collision_layer = 16
collision_mask = 8
monitoring = false
monitorable = false
script = ExtResource("4_piqjp")

[node name="Attack Collider" type="CollisionShape2D" parent="Attack Area"]
shape = SubResource("RectangleShape2D_305y3")

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"
script = ExtResource("5_bwarm")

[node name="LinkMovement" type="Node" parent="."]
script = ExtResource("5_excs0")

[node name="LinkCombat" type="Node" parent="."]
script = ExtResource("6_2h8fc")

[node name="LinkInteract" type="Node" parent="."]
script = ExtResource("7_2vkl0")

[node name="LinkState" type="Node" parent="."]
script = ExtResource("8_ryf5n")

[connection signal="animation_finished" from="Link Sprite Mask/Link Sprite" to="Link Sprite Mask/Link Sprite" method="_on_animation_finished"]
[connection signal="animation_looped" from="Link Sprite Mask/Link Sprite" to="Link Sprite Mask/Link Sprite" method="_on_animation_finished"]
[connection signal="attack_ended" from="Link Sprite Mask/Link Sprite" to="Attack Area" method="_on_link_sprite_attack_ended"]
[connection signal="attack_ended" from="Link Sprite Mask/Link Sprite" to="LinkCombat" method="_on_animated_sprite_2d_attack_ended"]
[connection signal="area_entered" from="Link Hitbox" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Link Hitbox" to="LinkInteract" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Link Hitbox" to="." method="_on_link_hitbox_area_exited"]
[connection signal="area_exited" from="Link Hitbox" to="." method="_on_area_2d_area_exited"]
[connection signal="area_exited" from="Link Hitbox" to="LinkInteract" method="_on_area_2d_area_exited"]
[connection signal="sprite_update" from="LinkMovement" to="Link Sprite Mask/Link Sprite" method="_on_link_movement_sprite_update"]
[connection signal="sprite_update" from="LinkMovement" to="Attack Area" method="set_direction"]
[connection signal="play_attacked_sound" from="LinkCombat" to="AudioPlayer" method="play_attacked_sound"]
[connection signal="play_shield_block_sound" from="LinkCombat" to="AudioPlayer" method="play_shield_block_sound"]
[connection signal="play_sword_swing_sound" from="LinkCombat" to="AudioPlayer" method="play_sword_swing_sound"]
[connection signal="sword_swing_attack" from="LinkCombat" to="Link Sprite Mask/Link Sprite" method="_on_character_body_2d_attack"]
[connection signal="sword_swing_attack" from="LinkCombat" to="Attack Area" method="_on_link_attack"]
[connection signal="door_enter_sound" from="LinkInteract" to="AudioPlayer" method="play_door_enter_sound"]
[connection signal="key_item_pickup_sound" from="LinkInteract" to="AudioPlayer" method="play_key_item_pickup_sound"]
